--- a/index.html
+++ b/index.html
@@ -6,13 +6,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="styles.css">
-
     <script src="vasara.js"></script>
+
     <script defer src="demo.js"></script>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        canvas {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+        }
+
+        p {
+            position: absolute;
+        }
+    </style>
 </head>
 
 <body>
+    <p>Press Alt+e</p>
     <canvas></canvas>
 </body>
 
